public/less/lanyon.less
/* ... */
// Set everything to border-box, but let modular layouts easily overwrite it
html  { box-sizing: border-box }
*,
*:before,
*:after { box-sizing: inherit }

html { height: 100% }
body { min-height: 100%; overflow-x: hidden; }

html,
body {
    margin: 0;
    padding: 0;
    font-size: 10px;
}

.embed {
   font-size: 10px!important;
}

body {
    position:relative;
    background-color: @baseBlue;
    background-image: url('../img/stars-bg.gif');
    background-image: url('../img/stars-bg.gif'), linear-gradient(to bottom, @baseBlue 714px, @darkBlue 100%), ;
    background-position: top center;
    background-repeat: repeat-x;
    background-attachment: fixed;

    color: @whiteBlue;
    -webkit-overflow-scrolling: touch;
}


article {
    // Add a line break between succeeding elements
    // Needs to stay here.. has to concatinate after typography.less
    * + * { margin-top: 1.5rem }
}


.wrap {
    background: url('../img/stars.png');
    min-height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
}

main {
    display: block;
    font-size: 1.5rem;
    width: auto;
    transition: @navContainerTiming @navContainerEase;
    @media @notMobile {
        margin-left: @navContainerWidth;
    }
    @media only screen and (min-width: 1483px) {
        margin-left: 15%;
    }
    &.menuOpen {
        transform: translate3d(@navContainerWidth, 0px, 0px);
        transform-style: preserve-3d;
        backface-visibility: hidden;
        @media @notMobile {
            transform: translate3d(0, 0, 0);
        }
    }
}

#top {
    z-index: 100;
    background: url('../img/logo-retna.png');
    background-size: contain;
    background-position: top center;
    background-repeat: no-repeat;
    image-rendering: pixelated;
    padding-top: 16.831%;
    max-width: 900px;
    position: relative;
    margin: 0 auto;
    @media only screen and (min-width: 1137px) {
        padding: 0;
        height: 152px;
    }
    @media only screen and (max-width: 960px) {
        padding: 0;
        height: 120px;
        background-position: 20% 50%;
        background-size: cover;
    }
    @media @phone {
        background-position: 50% 50%;
        margin-bottom: 60px;
    }

   #logo-link {
      display: block;
      position: absolute;
      top: 10px;
      left: 50%;
      transform: translate3d(-50%, 0, 0);
      width: 250px;
      height: 80px;
      margin: 0 auto;

      @media only screen and (min-width: 530px) and (max-width: 960px) {
         left: 34.5%;
         transform: translate3d(0,0,0);
      }

      @media only screen and (min-width: 961px) and (max-width: 1136px) {
         height: auto;
         width: 35%;
         padding-top: 11%;
      }

      @media only screen and (min-width: 1137px) {
         width: 310px;
         height: 98px;
      }
   }
}



#content {
    position: relative;
    padding: 0 4%;
    margin: 0 auto;
    min-height: 100%;
    
    @media @phone {
        padding: 0 1.5%;
    }

    @media @mobile {
        width:100%;
        margin: 0;
    }

    @media @desktop {
        width:90%;
        padding: 0;
    }
}

#footer p {
    padding: 1em;
    margin: 0;
}

section.container {
    background: white;
    width: 100%;
    margin: 0 auto;
    border: 2px solid white;
    padding: 4%;
    border-radius: 2.5rem;
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 50px rgba(185, 205, 200, .7),
        inset 0px 0px 180px rgba(205, 225, 230, 1);
    max-width:1200px!important;

    @media @phone {
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 5px rgba(185, 205, 200, .7),
        inset 0px 0px 25px rgba(205, 225, 230, 1);
    }

    @media @tablet {
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 5px rgba(185, 205, 200, .7),
        inset 0px 0px 25px rgba(205, 225, 230, 1);
    }
}


// center content - mostly an image wrapper for blog posts since markdown wrapps them in a p tag
.center {
    display: block;
    text-align: center;
    margin: 1rem auto;
    width: 60%;
    
    @media @tablet { width: 80% }
    @media @phone { width: 100% }
}

article {
    position: relative;
    padding: 4%;
    border-radius: 26px;
    -webkit-transform:translateZ(1px);
    -moz-transform:translateZ(1px);
    -o-transform:translateZ(1px);
    transform:translateZ(1px);
}

.masonry article {
    padding: 2rem;
    border-radius: 2rem
}




.page-head {
    margin-bottom: 4rem;
    text-align: center;
    
    p {font-size: 1.8rem;}
}


hr {
   margin: 32px 0;
   border: none;
   height: 2px;
   background-image: linear-gradient( to right,
      fade(@lightBlue,0%),
      fade(@lightBlue,100%),
      fade(@lightBlue,0%),
   );
}


.quote #back {
    margin: 0;
}
/* ... */

